backend/base/aspnet-app/db-string.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet
spec:
  template:
    spec:
      containers:
      - name: aspnet
