backend/base/aspnet-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aspnet
spec:
  ports:
  - name: aspnet-http
    port: 8080
    protocol: TCP
  selector:
    app: aspnet
  type: ClusterIP
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
