backend/base/aspnet-app/ingress.tpl.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: aspnet
spec:
  rules:
  - host: someHost
    http:
      paths:
      - backend:
          service:
            name: aspnet
            port:
              name: aspnet-http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - someHost
